# dsce-sample-apps

./: .gitignore  README.md  requirements.txt  sentiment_analysis_demo.py
agent-handoff-insights/: app-config.properties  readme.md  template.py  transcript.txt
agentic-ai-for-retail-inventory-management/: Code perspective.md  agentic_retail_architecture.drawio  demo_explainer.md  instructor.md  openapi.json  readme.md  readme_setup.md
ai-guardrails/: app-config.properties  app.py  readme.md  requirements.txt  template.py
ai-guardrails-outdated/: data.json
ask-eda/: app-config.properties  readme.md  requirements.txt  template.py
ask-my-data/: README.md  mt_rag.py  requirements.txt
banking-assistant-with-mongodb/: README.md  financial_dataset_chatbot.json  keywords.json  preprocessing.py  processing.py  requirements.txt
brief-builder/: app-config.properties  readme.md  requirements.txt  sample-brief-gen.txt  template.py
car-rental-review-insights/: app-config.properties  readme.md
compare-ibm-models/: app-config.properties  data.json  pricing_list.json  readme.md  requirements.txt  template.py
concept-extraction/: concept-extraction.py  readme.md  requirements.txt
conversation-intelligence/: sales-conv-sample.txt
customer-care-portal/: index.html
customer-care-portal-wa/: index.html  readme.md  watsonx-openapi.json
data-transformation-with-ai/: origin_bank_orchestrate_agent.md  readme_setup.md  requirements.txt  setup_datastage.md  setup_db2.md  setup_presto.md
email-thread-summarization/: app-config.properties  email_conv.txt  readme.md  template.py  (+1 more)
loan-preprocessing-agents/backend/: Dockerfile  README.md  database.py  loan_app.db  logs.json  main.py  models.py  pyproject.toml  schemas.py  security.py
loan-preprocessing-agents/backend/services/: watsonx.py
loan-preprocessing-agents/backend/utils/: agents.py  chat_image.py  cos_client.py  kv_extraction.py
wxo-talent-acquisition/: README.md  demo-explainer.md  metadata.yaml  orchestrate_agent.txt  pyproject.toml  sample_inputs.txt
wxo-talent-acquisition/adk/: instructions.md  ta-backend-connection.yaml
wxo-talent-acquisition/backend/: .gitignore  Dockerfile  main.py  openapi.json  requirements.txt  schemas.py  utils.py
wxo-talent-acquisition/backend/services/: elastic_wrapper.py  watsonx_wrapper.py
wxo-talent-acquisition/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
wxo-talent-acquisition/frontend/src/: App.css  App.tsx  main.tsx
wxo-talent-acquisition/frontend/src/components/: orchestrateEmbed.css  orchestrateEmbed.tsx
wxo-talent-acquisition/frontend/src/lib/: api.ts
wxo-talent-acquisition/frontend/src/pages/: TalentHubPage.tsx
(+1106 files in other folders)
